# zk-oracle-aggregator

./: .gitignore  .markdownlint-cli2.yaml  Cargo.toml  LICENSE-MIT  README.md  SECURITY.md  deny.toml  docker-compose.yml  sytem-overview.md  typos.toml
.cursor/skills/oracle-security/: SKILL.md
.github/: dependabot.yaml  pull_request_template.md
.github/workflows/: check_msrv.yaml  ci.yaml
attribution/: dependencies.toml
bins/oracle-aggregator/: Cargo.toml
bins/oracle-aggregator/src/: main.rs
bins/oracle-fetcher/: Cargo.toml
bins/oracle-fetcher/src/: main.rs
bins/oracle-prover/: Cargo.toml
bins/oracle-prover/src/: main.rs
bins/oracle-server/: Cargo.toml
bins/oracle-server/src/: main.rs
bins/oracle-submitter/: Cargo.toml
bins/oracle-submitter/src/: main.rs
bins/oracle-verifier/: Cargo.toml
bins/oracle-verifier/src/: main.rs
config/: sources.example.toml
crates/oracle-core/: Cargo.toml
crates/oracle-core/src/: lib.rs
crates/oracle-core/src/aggregator/: mod.rs
crates/oracle-core/src/fetcher/: mod.rs
crates/oracle-core/tests/: security_adversarial.rs
docs/: ARCHITECTURE.md  WHY.md
docs/diagrams/: trust-model.mmd
docs/plans/: m3_zk_circuit.plan.md  security_ci.plan.md
docs/security/: AUDIT_SKILLS.md  adversarial-vectors.md  audit-findings.md  invariants.md  threat-model.md
migrations/: 001_init.sql
