[workspace]
resolver = "2"
members = [
    "crates/oracle-core",
    "bins/oracle-server",
    "bins/oracle-fetcher",
    "bins/oracle-aggregator",
    "bins/oracle-prover",
    "bins/oracle-verifier",
    "bins/oracle-submitter",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.81"
license = "MIT"
repository = "https://github.com/akshitj11/zk-oracle-aggregator"

[workspace.dependencies]
anyhow = "1"
blake3 = "1"
futures = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rust_decimal = { version = "1", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum = "0.8"
tower-http = { version = "0.6", features = ["trace"] }
clap = { version = "4", features = ["derive"] }
toml = "1.1"

[workspace.lints.rust]
unsafe_code = "warn"
missing_docs = "allow"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
strip = true
