[package]
name = "oracle-aggregator"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "oracle-aggregator"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
oracle-core = { path = "../../crates/oracle-core" }
serde_json.workspace = true

[lints]
workspace = true
