[package]
name = "oracle-fetcher"
description = "CLI to fetch oracle sources concurrently"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "oracle-fetcher"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
oracle-core = { path = "../../crates/oracle-core" }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[lints]
workspace = true
