[package]
name = "oracle-server"
description = "REST API for oracle proofs and resolution"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "oracle-server"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
axum.workspace = true
oracle-core = { path = "../../crates/oracle-core" }
serde = { workspace = true, features = ["derive"] }
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[lints]
workspace = true
